--- a/public/index.html
+++ b/public/index.html
@@ -59,8 +59,8 @@
     </div>
   </div>
   <script src="./scripts/slider.js"> </script>
-  <script src="./scripts/validator.js"> </script>
-  <script src="./scripts/validate.js"> </script>
+  <!-- <script src="./scripts/validator.js"> </script>
+  <script src="./scripts/validate.js"> </script> -->
   <script src="./scripts/login.js"></script>
   <script src="./scripts/index.js"></script>
   <script type="module" src="./scripts/animation.js"></script>
