--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
   <script src="./scripts/validate.js"> </script> -->
   <script src="./scripts/login.js"></script>
   <script src="./scripts/index.js"></script>
-  <script type="module" src="./scripts/animation.js"></script>
+  <!-- <script type="module" src="./scripts/animation.js"></script> -->
 </body>
 
 </html>
